# spotigram

./: .gitignore  setup.cfg  setup.py
spotigram/: __init__.py  app.py
spotigram/flask/: configuration.py  models.py  views.py
spotigram/spotify/: datatypes.py  functions.py
spotigram/telegram/: datatypes.py  functions.py  queries.py
spotigram/utilities/: basetypes.py  functions.py
spotigram/web/: configuration.py  models.py  views.py
